--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,8 @@
 <html>
     <body>
         <h1>
-            hello Bryce!!!
+            hello world!!!
+            Superman is in the building!!!
         </h1>
     </body>
 </html>
