--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
     <body>
         <h1>
             hello world!!!
-            Superman is in the building!!!
+            Its working!!
         </h1>
     </body>
 </html>
