--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,102 @@
 <!DOCTYPE html>
-<html>
-    <body>
-        <h1>
-            hello world!!!
-            Its working!!
-        </h1>
-    </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Prob&Solu</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div id="header">
+        <div id="left-header">
+            <h1>Problems and Solutions</h1>
+        </div>
+        <div id="right-header">
+            <button id="login">Login</button>
+        </div>
+    </div>
+    </header>
+    <div id="filters">
+        <input type="search" placeholder="Search problems..">
+        <input id="urgency" type="radio">
+        <label for="urgency">Urgency</label>
+        <input id="type" type="radio">
+        <label for="type">Type</label>
+        <input id="alphabetical" type="radio">
+        <label for="alphabetical">Alphabetical</label>
+    </div>
+    <div id="table">
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>Problem</th>
+                    <th>Urgency</th>
+                    <th>Type</th>
+                    <th>Author</th>
+                    <th>Date</th>
+                    <th>Step-By-Step Solution</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Dom</td>
+                    <td>6000</td>
+                    <td>Dom</td>
+                    <td>6000</td>
+                    <td>6000</td>
+                    <td>6000</td>
+                </tr>
+                <tr>
+                    <td>Melissa</td>
+                    <td>5150</td>
+                    <td>Dom</td>
+                    <td>6000</td>
+                    <td>6000</td>
+                    <td>6000</td>
+                </tr>
+                <tr>
+                    <td>Dom</td>
+                    <td>6000</td>
+                    <td>Dom</td>
+                    <td>6000</td>
+                    <td>6000</td>
+                    <td>6000</td>
+                </tr>
+                <tr>
+                    <td>Dom</td>
+                    <td>6000</td>
+                    <td>Dom</td>
+                    <td>6000</td>
+                    <td>6000</td>
+                    <td>6000</td>
+                </tr>
+                <tr>
+                    <td>Dom</td>
+                    <td>6000</td>
+                    <td>Dom</td>
+                    <td>6000</td>
+                    <td>6000</td>
+                    <td>6000</td>
+                </tr>
+                <tr>
+                    <td>Dom</td>
+                    <td>6000</td>
+                    <td>Dom</td>
+                    <td>6000</td>
+                    <td>6000</td>
+                    <td>6000</td>
+                </tr>
+                <tr>
+                    <td>Dom</td>
+                    <td>6000</td>
+                    <td>Dom</td>
+                    <td>6000</td>
+                    <td>6000</td>
+                    <td>6000</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</body>
 </html>
