--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="header">
         <div id="left-header">
-            <h1>Problems and Solutions</h1>
+            <h1>Problems and Solutions!!!!!</h1>
         </div>
         <div id="right-header">
             <button id="login">Login</button>
