--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
         </div>
     </div>
     </header>
-    <div id="filters">
+    <!-- <div id="filters">
         <input type="search" placeholder="Search problems..">
         <input id="urgency" type="radio">
         <label for="urgency">Urgency</label>
@@ -25,7 +25,7 @@
         <label for="type">Type</label>
         <input id="alphabetical" type="radio">
         <label for="alphabetical">Alphabetical</label>
-    </div>
+    </div> -->
     <div id="table">
         <table class="table">
             <thead>
