--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,10 @@
             <h1>Problems and Solutions</h1>
         </div>
         <div id="right-header">
-            <button id="login">Login</button>
+            <form method="POST" action="/">
+                <button id="login">Login</button>
+            </form>
+            
         </div>
     </div>
     </header>
