login to logout

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
             <h1>Problems and Solutions</h1>
         </div>
         <div id="right-header">
-            <button id="login">Login</button>
+            <button id="login">Logout</button>
         </div>
     </div>
     </header>
