moved css and image to static folder

--- a/templates/login.html
+++ b/templates/login.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <h1><em>Problem?</em></h1>
-        <link rel="stylesheet" href="../style.css">
+        <link rel="stylesheet" href="../static/style.css">
     </head>
     <body class="loginBody">
         <div class="loginPage">
