solution creation works now

--- a/templates/createSolution.html
+++ b/templates/createSolution.html
@@ -4,5 +4,12 @@
         <h1>
             create solution
         </h1>
+        <form method="POST" action="/createSolution">
+            <p>title</p>
+            <input type="text" name="title">
+            <p>solution</p>
+            <input type="text" name="solution">
+            <input type="submit" value="post solution">
+        </form>
     </body>
 </html>
