--- a/templates/createSolution.html
+++ b/templates/createSolution.html
@@ -4,5 +4,13 @@
         <h1>
             create solution
         </h1>
+        <div id="title"></div>
+        <div id="category"></div>
+        <div id="description">
+            <b>Description</b>
+            <textarea name="" id="" cols="30" rows="10">
+            </textarea>
+            <input type="submit" value="doc_submit">
+        </div>
     </body>
 </html>
