--- a/static/style.css
+++ b/static/style.css
@@ -150,7 +150,15 @@ body {
     background-color: #3bd1d3;
 }
 
+.landingPageBtns button:hover {
+    background-color: rgb(56, 205, 207, 0.8);
+}
 
+.landingPageBtns button:active {
+    background-color: rgb(56, 205, 207, 0.8);
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
+    transform: translateY(4px);
+}
 
 .landingPageBtns .submitBtn {
     height: 130px;
@@ -167,24 +175,77 @@ body {
 
 #btn1 {
     background-color: #fed757;
+    color: black;
+}
+
+#btn1:hover {
+    background-color: rgb(255, 223, 61, 0.8)
+}
+
+#btn1:active {
+    background-color: rgb(255, 223, 61, 0.8);
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
+    transform: translateY(4px);
 }
 
 #btn2 {
     background-color: #79f391;
+    color: black;
+}
+
+#btn2:hover {
+    background-color: rgb(121, 241, 139, 0.8);
+}
+
+#btn2:active {
+    background-color: rgb(121, 241, 139, 0.8);
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
+    transform: translateY(4px);
 }
 
 #btn3 {
     background-color: #fa80d2;
+    color: black;
 }
+
+#btn3:hover {
+    background-color: rgb(255, 130, 215, 0.8);
+}
+
+#btn3:active {
+    background-color: rgb(255, 130, 215, 0.8);
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
+    transform: translateY(4px);
+
+}
+
 
 .landingPageBtns {
     gap: 20px;
 }
 
+
 #landingPageBody {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: rgba(0, 0, 0, 0.2);
+    /* background-color: rgba(0, 0, 0, 0.2); */
+}
+
+.createSolutionBody {
+    display: flex;
+    flex-direction: column;
+
+}
+
+.createSolutionBody h1 {
+    font-size: 40px;
+
+}
+
+.createSolutionBody p {
+    font-size: 24px;
+    font-weight: bold;
+
 }
 
