--- a/templates/landingPage.html
+++ b/templates/landingPage.html
@@ -8,7 +8,7 @@
             Welcome {{username}}
         </h1>
         <div class="landingPageBtns">
-            <button><img src="../home.png" width="50px" height="50px"></button>
+            <a href="landingPage.html"><button><img src="../static/home.png" width="50px" height="50px"></button></a>
             <form method="POST" action="/landingPage">
                 <input type="hidden" name="btn_id" value="list_of_problems">
                 <input id="btn1" class="submitBtn" type="submit" value="Find Solution">
