added back button to findSolution.html

--- a/templates/problemList.html
+++ b/templates/problemList.html
@@ -4,6 +4,9 @@
         <h1>
             problem list
         </h1>
+        <form method="POST" action="/problemList">
+            <input type="submit" value="Back to Landing Page">
+        </form>
         <o1>
             {%for i in range(0,len_problems)%}
             <li>
