--- a/templates/createSolution.html
+++ b/templates/createSolution.html
@@ -10,9 +10,14 @@
         <form method="POST" action="/createSolution">
             <p>Title</p>
             <input type="text" name="title">
-            <p>Solution</p>
-            <input type="text" name="solution"><br>
+            <div id="category"></div>
+            <p>Solution Description</p>
+            <textarea name="solution" id="" cols="30" rows="10">
+            </textarea>
+            <br>
+            <div class="submitBtnSolutionPage">
             <input type="submit" value="Post Solution">
+            </div>
         </form>
     </body>
 </html>
