Add style to return to landing page btn

--- a/static/style.css
+++ b/static/style.css
@@ -272,3 +272,13 @@ body {
 
 }
 
+.backToLanding input {
+    margin-top: 100px;
+    width: 244px;
+    height: 30px;
+    border-radius: 20px;
+    border: none;
+    font-family: sans-serif;
+    font-size: 17px;
+}
+
