--- a/templates/createSolution.html
+++ b/templates/createSolution.html
@@ -21,8 +21,10 @@
             </div>
         </form>
         <form method="POST" action="/createSolution">
-            <input type="hidden" name="btn_id" value="back">
-            <input type="submit" value="Back to Landing Page">
+            <div class="backToLanding">
+                <input type="hidden" name="btn_id" value="back">
+                <input type="submit" value="Back to Landing Page">
+            </div>
         </form>
     </body>
 </html>
