Style Problem Page

--- a/templates/problemList.html
+++ b/templates/problemList.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
-    <body>
+    <head>
+        <link rel="stylesheet" href="../static/style.css">
+    </head>
+    <body class="problemListBody">
         <h1>
-            problem list
+            Problem List
         </h1>
-        <form method="POST" action="/problemList">
-            <input type="submit" value="Back to Landing Page">
-        </form>
         <o1>
             {%for i in range(0,len_problems)%}
             <li>
@@ -15,4 +15,9 @@
             {%endfor%}
         </o1>
     </body>
+    <div id="footer">
+        <form method="POST" action="/problemList">
+            <input type="submit" value="Back to Landing Page">
+        </form>
+    </div>
 </html>
