--- a/static/style.css
+++ b/static/style.css
@@ -282,3 +282,28 @@ body {
     font-size: 17px;
 }
 
+.problemListBody {
+    display: flex;
+    flex-direction: column;
+    background-image: url("bgimageActuallyFinal.jpg");
+    -webkit-background-size: cover;
+    background-repeat: no-repeat;
+}
+
+#footer {
+    flex: auto;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    margin-bottom: 20px;
+}
+
+#footer input {
+    width: 244px;
+    height: 30px;
+    border-radius: 20px;
+    border: none;
+    font-family: sans-serif;
+    font-size: 17px;
+}
+
