started edit solutions page

--- a/templates/userSolutions.html
+++ b/templates/userSolutions.html
@@ -2,7 +2,7 @@
 <html>
     <body>
         <h1>
-            user solutions
+            {{username}}'s past solutions
         </h1>
     </body>
 </html>
