--- a/templates/problemList.html
+++ b/templates/problemList.html
@@ -4,6 +4,7 @@
         <link rel="stylesheet" href="../static/style.css">
     </head>
     <script>
+        function myFunction() {
           // Declare variables
           var input, filter, table, tr, td, i, txtValue;
           input = document.getElementById("myInput");
@@ -23,6 +24,7 @@
               }
             }
           }
+        }
         </script>
     <body class="problemListBody">
         <h1>
