Added Star Rating to Problem List

--- a/templates/problemList.html
+++ b/templates/problemList.html
@@ -37,6 +37,7 @@
                     <th>Author</th>
                     <th>Problem</th>
                     <th>Step-By-Step Solution</th>
+                    <th>Star Rating</th>
                 </tr>
             </thead>
             <tbody>
