--- a/static/style.css
+++ b/static/style.css
@@ -39,12 +39,13 @@ body {
     border: 1px solid black;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
     font-size: 1em;
+    max-width: 400px;
 }
 
 .table thead tr {
     background-color: #1A73E8;
     color: #ffffff;
-    text-align: left;
+    text-align: center;
 }
 
 .table tbody tr {
@@ -57,11 +58,9 @@ body {
 }
 
 .table tbody tr:nth-of-type(even) {
-    background-color: #f3f3f3;
 }
 
 .table tbody tr.active-row {
-    color: #1A73E8;
 }
 
 #table {
@@ -288,7 +287,7 @@ body {
     flex-direction: column;
     background-image: url("bgimageActuallyFinal.jpg");
     -webkit-background-size: cover;
-    background-repeat: no-repeat;
+    background-repeat: repeat;
 }
 
 #footer {
