formatting for lists

--- a/templates/problemList.html
+++ b/templates/problemList.html
@@ -43,7 +43,7 @@
             <tbody>
                 {%for i in range(0,len_problems)%}
             <tr>
-                <td>{{problems[i].author}}</td> <td>Problem {{problems[i].title}}</td> <td>Solution {{problems[i].solution}}</td>
+                <td>{{problems[i].author}}</td> <td> {{problems[i].title}}</td> <td> {{problems[i].solution}}</td>
             </tr>
                 {%endfor%}
             </tbody>
